package dev.gemmabcr.models

data class Location(
    val id: Int,
    val name: String,
    val area: Area,
)
