package dev.gemmabcr.models.evolutions

interface EvolutionChain {
    val name: String
    val detail: EvolutionChainDetail
}
