package dev.gemmabcr.models.evolutions

interface EvolutionChainDetail
