@startuml
class Pokemon {
+ hisuiId: Int
+ generalId: Int
+ name: String
+ types: List<Type>
+ location: List<Location>
+ toDos: List<ToDo>
+ caughtCondition: CaughtCondition [optional]
+ evolution: List<EvolutionChain>
}

class Location {
+ id: Int
+ name: String
+ area: Area
}

abstract class ToDo {
+ id: Int
+ goal: Int
# description(): String
}

interface EvolutionChain {
+ name: String
+ detail: EvolutionChainDetail
}
interface EvolutionChainDetail

class EvolvesFrom
class EvolvesTo

class LevelUpEvolutionDetail

Pokemon o--> "1..*" ToDo
Pokemon o--> "1..*" Location
Pokemon o--> "1..*" Type
Pokemon o--> "1..*" EvolutionChain
EvolutionChain o--> "1..*" EvolutionChainDetail

EvolvesFrom .u.|> EvolutionChain
EvolvesTo .u.|> EvolutionChain

LevelUpEvolutionDetail .u.|> EvolutionChainDetail
@enduml